x-pack/plugin/plesql/src/main/java/org/elasticsearch/xpack/plesql/parser/PlEsqlProcedureParser.java
/*
 * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 * or more contributor license agreements. Licensed under the Elastic License
 * 2.0; you may not use this file except in compliance with the Elastic License
 * 2.0.
 */

package org.elasticsearch.xpack.plesql.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlEsqlProcedureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ELSEIF=1, ELSE=2, IF=3, THEN=4, END=5, BEGIN=6, EXECUTE=7, DECLARE=8,
		SET=9, FOR=10, IN=11, WHILE=12, LOOP=13, ENDLOOP=14, TRY=15, CATCH=16,
		FINALLY=17, THROW=18, ENDTRY=19, FUNCTION=20, RETURN=21, BREAK=22, INT_TYPE=23,
		FLOAT_TYPE=24, STRING_TYPE=25, DATE_TYPE=26, NUMBER=27, PLUS=28, MINUS=29,
		MULTIPLY=30, DIVIDE=31, GREATER_THAN=32, LESS_THAN=33, NOT_EQUAL=34, GREATER_EQUAL=35,
		LESS_EQUAL=36, OR=37, AND=38, EQUAL=39, DOT_DOT=40, PIPE=41, DOT=42, LPAREN=43,
		RPAREN=44, COMMA=45, COLON=46, SEMICOLON=47, FLOAT=48, INT=49, STRING=50,
		ID=51, COMMENT=52, WS=53;
	public static final int
		RULE_procedure = 0, RULE_statement = 1, RULE_break_statement = 2, RULE_return_statement = 3,
		RULE_expression_statement = 4, RULE_execute_statement = 5, RULE_variable_assignment = 6,
		RULE_esql_query_content = 7, RULE_declare_statement = 8, RULE_variable_declaration_list = 9,
		RULE_variable_declaration = 10, RULE_assignment_statement = 11, RULE_if_statement = 12,
		RULE_elseif_block = 13, RULE_condition = 14, RULE_loop_statement = 15,
		RULE_try_catch_statement = 16, RULE_throw_statement = 17, RULE_function_definition = 18,
		RULE_function_call_statement = 19, RULE_function_call = 20, RULE_parameter_list = 21,
		RULE_parameter = 22, RULE_argument_list = 23, RULE_expression = 24, RULE_logicalOrExpression = 25,
		RULE_logicalAndExpression = 26, RULE_equalityExpression = 27, RULE_relationalExpression = 28,
		RULE_additiveExpression = 29, RULE_multiplicativeExpression = 30, RULE_unaryExpr = 31,
		RULE_primaryExpression = 32, RULE_datatype = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"procedure", "statement", "break_statement", "return_statement", "expression_statement",
			"execute_statement", "variable_assignment", "esql_query_content", "declare_statement",
			"variable_declaration_list", "variable_declaration", "assignment_statement",
			"if_statement", "elseif_block", "condition", "loop_statement", "try_catch_statement",
			"throw_statement", "function_definition", "function_call_statement",
			"function_call", "parameter_list", "parameter", "argument_list", "expression",
			"logicalOrExpression", "logicalAndExpression", "equalityExpression",
			"relationalExpression", "additiveExpression", "multiplicativeExpression",
			"unaryExpr", "primaryExpression", "datatype"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ELSEIF'", "'ELSE'", "'IF'", "'THEN'", "'END'", "'BEGIN'", "'EXECUTE'",
			"'DECLARE'", "'SET'", "'FOR'", "'IN'", "'WHILE'", "'LOOP'", "'END LOOP'",
			"'TRY'", "'CATCH'", "'FINALLY'", "'THROW'", "'END TRY'", "'FUNCTION'",
			"'RETURN'", "'BREAK'", "'INT'", "'FLOAT'", "'STRING'", "'DATE'", "'NUMBER'",
			"'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'!='", "'>='", "'<='", "'OR'",
			"'AND'", "'='", "'..'", "'|'", "'.'", "'('", "')'", "','", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ELSEIF", "ELSE", "IF", "THEN", "END", "BEGIN", "EXECUTE", "DECLARE",
			"SET", "FOR", "IN", "WHILE", "LOOP", "ENDLOOP", "TRY", "CATCH", "FINALLY",
			"THROW", "ENDTRY", "FUNCTION", "RETURN", "BREAK", "INT_TYPE", "FLOAT_TYPE",
			"STRING_TYPE", "DATE_TYPE", "NUMBER", "PLUS", "MINUS", "MULTIPLY", "DIVIDE",
			"GREATER_THAN", "LESS_THAN", "NOT_EQUAL", "GREATER_EQUAL", "LESS_EQUAL",
			"OR", "AND", "EQUAL", "DOT_DOT", "PIPE", "DOT", "LPAREN", "RPAREN", "COMMA",
			"COLON", "SEMICOLON", "FLOAT", "INT", "STRING", "ID", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlEsqlProcedure.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

    @SuppressWarnings("this-escape")
	public PlEsqlProcedureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(PlEsqlProcedureParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(PlEsqlProcedureParser.END, 0); }
		public TerminalNode EOF() { return getToken(PlEsqlProcedureParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitProcedure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(BEGIN);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				statement();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4371658776549256L) != 0) );
			setState(74);
			match(END);
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Throw_statementContext throw_statement() {
			return getRuleContext(Throw_statementContext.class,0);
		}
		public Execute_statementContext execute_statement() {
			return getRuleContext(Execute_statementContext.class,0);
		}
		public Declare_statementContext declare_statement() {
			return getRuleContext(Declare_statementContext.class,0);
		}
		public Assignment_statementContext assignment_statement() {
			return getRuleContext(Assignment_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Loop_statementContext loop_statement() {
			return getRuleContext(Loop_statementContext.class,0);
		}
		public Try_catch_statementContext try_catch_statement() {
			return getRuleContext(Try_catch_statementContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Function_call_statementContext function_call_statement() {
			return getRuleContext(Function_call_statementContext.class,0);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public Break_statementContext break_statement() {
			return getRuleContext(Break_statementContext.class,0);
		}
		public Expression_statementContext expression_statement() {
			return getRuleContext(Expression_statementContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				throw_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				execute_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				declare_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				assignment_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				if_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				loop_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				try_catch_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				function_definition();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				function_call_statement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(86);
				return_statement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(87);
				break_statement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(88);
				expression_statement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(89);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Break_statementContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(PlEsqlProcedureParser.BREAK, 0); }
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public Break_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_break_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterBreak_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitBreak_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitBreak_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Break_statementContext break_statement() throws RecognitionException {
		Break_statementContext _localctx = new Break_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_break_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(BREAK);
			setState(93);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_statementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(PlEsqlProcedureParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public Return_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterReturn_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitReturn_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitReturn_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_statementContext return_statement() throws RecognitionException {
		Return_statementContext _localctx = new Return_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_return_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(RETURN);
			setState(96);
			expression();
			setState(97);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expression_statementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public Expression_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterExpression_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitExpression_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitExpression_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expression_statementContext expression_statement() throws RecognitionException {
		Expression_statementContext _localctx = new Expression_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			expression();
			setState(100);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Execute_statementContext extends ParserRuleContext {
		public TerminalNode EXECUTE() { return getToken(PlEsqlProcedureParser.EXECUTE, 0); }
		public Variable_assignmentContext variable_assignment() {
			return getRuleContext(Variable_assignmentContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PlEsqlProcedureParser.LPAREN, 0); }
		public Esql_query_contentContext esql_query_content() {
			return getRuleContext(Esql_query_contentContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PlEsqlProcedureParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public Execute_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterExecute_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitExecute_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitExecute_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Execute_statementContext execute_statement() throws RecognitionException {
		Execute_statementContext _localctx = new Execute_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_execute_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(EXECUTE);
			setState(103);
			variable_assignment();
			setState(104);
			match(LPAREN);
			setState(105);
			esql_query_content();
			setState(106);
			match(RPAREN);
			setState(107);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_assignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PlEsqlProcedureParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(PlEsqlProcedureParser.EQUAL, 0); }
		public Variable_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterVariable_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitVariable_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitVariable_assignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_assignmentContext variable_assignment() throws RecognitionException {
		Variable_assignmentContext _localctx = new Variable_assignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ID);
			setState(110);
			match(EQUAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Esql_query_contentContext extends ParserRuleContext {
		public Esql_query_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_esql_query_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterEsql_query_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitEsql_query_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitEsql_query_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Esql_query_contentContext esql_query_content() throws RecognitionException {
		Esql_query_contentContext _localctx = new Esql_query_contentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_esql_query_content);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(112);
					matchWildcard();
					}
					}
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declare_statementContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlEsqlProcedureParser.DECLARE, 0); }
		public Variable_declaration_listContext variable_declaration_list() {
			return getRuleContext(Variable_declaration_listContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public Declare_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterDeclare_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitDeclare_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitDeclare_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_statementContext declare_statement() throws RecognitionException {
		Declare_statementContext _localctx = new Declare_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declare_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(DECLARE);
			setState(119);
			variable_declaration_list();
			setState(120);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declaration_listContext extends ParserRuleContext {
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PlEsqlProcedureParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PlEsqlProcedureParser.COMMA, i);
		}
		public Variable_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterVariable_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitVariable_declaration_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitVariable_declaration_list(this);
			else return visitor.visitChildren(this);
		}
	}
